--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,31 +1,40 @@
-.gallery-container{
-    margin: auto;
+.gallery-container {
+    width: calc(100% - 220px);
+    padding: 20px;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: 220px;
 }
 
 .gallery-main-title,
-.gallery-title{
+.gallery-title {
     text-align: center;
-    margin: auto;
 }
 
-.gallery-content-container{
+.gallery-content-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 130px;
-    justify-content: center;
+    gap: 20px;
+    flex-direction: column;
+    align-content: center;
     margin-bottom: 80px;
 }
 
-.gallery-content-container h2{
+.gallery-content-container h2 {
     text-align: center;
 }
 
-.gallery-content-container img{
-    width: 500px;
+.gallery-content-container img {
+    width: 400px;
+    max-width: 400px;
     height: 300px;
-    align-content: center;
-    display: flex;
-    flex-direction: column;
     border: 2px solid #ccc;
     border-radius: 10px;
+}
+
+@media (max-width: 400px) {
+    .gallery-container {
+        width: 100%;
+        margin-right: 0;
+    }
 }
